[project]
name = "donkeyseo"
version = "0.1.0"
description = "Keyword research backend service with a 14-step pipeline for programmatic content planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # AI/LLM
    "pydantic-ai>=0.0.20",
    "pydantic-ai-slim[openrouter]>=0.0.20",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    # Caching
    "redis>=5.2.0",
    # HTTP client & scraping
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Private object storage (Cloudflare R2 S3 API)
    "boto3>=1.34.0",
    # Image metadata extraction
    "pillow>=10.0.0",
    # JWT Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    # ML/Clustering
    "numpy>=1.26.0",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.4.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "ty>=0.0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
